--- a/THE_APPLICATION/THE_APPLICATION.csproj
+++ b/THE_APPLICATION/THE_APPLICATION.csproj
@@ -88,5 +88,8 @@
       <Name>DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="dataset.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
