--- a/THE_APPLICATION/THE_APPLICATION.csproj
+++ b/THE_APPLICATION/THE_APPLICATION.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\Etudiant.cs" />
+    <Compile Include="Models\Eleve.cs" />
     <Compile Include="Models\Filiere.cs" />
     <Compile Include="Models\Module.cs" />
     <Compile Include="Models\Moyenne.cs" />
