--- a/Access/.env
+++ b/Access/.env
@@ -3,3 +3,6 @@ DB_HOST=127.0.0.1
 DB_DATABASE=dbjava
 DB_USERNAME=root
 DB_PASSWORD=toor
+Data_Source=DESKTOP-NTD2TUE
+Initial_Catalog=gestion_eleve
+Integrated_Security=True
