--- a/Access/Access.csproj
+++ b/Access/Access.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Models\Eleve.cs" />
     <Compile Include="Models\Filiere.cs" />
     <Compile Include="Models\Module.cs" />
+    <Compile Include="Models\Matiere.cs" />
     <Compile Include="Models\Moyenne.cs" />
     <Compile Include="Models\Note.cs" />
     <Compile Include="Program.cs" />
