yassine_last_commit

--- a/Access/.env
+++ b/Access/.env
@@ -1,8 +1,8 @@
 ﻿DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=dbjava
+DB_DATABASE=gestion_eleve
 DB_USERNAME=root
-DB_PASSWORD=toor
+DB_PASSWORD=
 Data_Source=DESKTOP-NTD2TUE
 Initial_Catalog=gestion_eleve
 Integrated_Security=True
