--- a/Access/.env
+++ b/Access/.env
@@ -2,7 +2,7 @@
 DB_HOST=127.0.0.1
 DB_DATABASE=dbjava
 DB_USERNAME=root
-DB_PASSWORD=toor
+DB_PASSWORD=
 Data_Source=DESKTOP-NTD2TUE
 Initial_Catalog=gestion_eleve
 Integrated_Security=True
