--- a/Access/Access.csproj
+++ b/Access/Access.csproj
@@ -66,5 +66,8 @@
       <Version>8.0.32.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ENSAT.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
