--- a/THE_APPLICATION/THE_APPLICATION.csproj
+++ b/THE_APPLICATION/THE_APPLICATION.csproj
@@ -72,17 +72,11 @@
     <Compile Include="main_form.Designer.cs">
       <DependentUpon>main_form.cs</DependentUpon>
     </Compile>
-	<Compile Include="Form1.cs">
-		<SubType>Form</SubType>
-	</Compile>
-	<Compile Include="Form1.Designer.cs">
-		<DependentUpon>Form1.cs</DependentUpon>
-	</Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="Gestion_des_etudiants_form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="Gestion_des_etudiants_form.Designer.cs">
+      <DependentUpon>Gestion_des_etudiants_form.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,12 +92,9 @@
     <EmbeddedResource Include="main_form.resx">
       <DependentUpon>main_form.cs</DependentUpon>
     </EmbeddedResource>
-	<EmbeddedResource Include="Form1.resx">
-		<DependentUpon>Form1.cs</DependentUpon>
-	</EmbeddedResource>
-	<EmbeddedResource Include="Form2.resx">
-		<DependentUpon>Form2.cs</DependentUpon>
-	</EmbeddedResource>
+    <EmbeddedResource Include="Gestion_des_etudiants_form.resx">
+      <DependentUpon>Gestion_des_etudiants_form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
