--- a/Access/Access.csproj
+++ b/Access/Access.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ENSAT.xml" />
+    <Content Include="toHTML.xslt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
